<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A3D697"
    tools:context=".view.fragments.ActualizarProductoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <FrameLayout
            android:id="@+id/frameLayout6"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:background="#C7ECC7"
            android:elevation="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/searchView">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/valtvcodigo"
                android:textSize="16sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/valetcodprod"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout7"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:background="#C7ECC7"
            android:elevation="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout6">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/valtvnombre"
                android:textSize="16sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/valetnombreprod"
                tools:ignore="TouchTargetSizeCheck" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout8"
            android:layout_width="110dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:background="#C7ECC7"
            android:elevation="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout15">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/valtvcantidad"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/valetcantidad"
                android:inputType="number"
                android:textAlignment="textEnd"
                tools:ignore="TouchTargetSizeCheck" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout14"
            android:layout_width="110dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:background="#C7ECC7"
            android:elevation="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout15">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/valtvprecio"
                android:textSize="16sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView3"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/valetprecio"
                android:inputType="number|numberDecimal"
                android:textAlignment="textEnd"
                tools:ignore="TouchTargetSizeCheck" />
        </FrameLayout>

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="#D8F1D0"
            android:elevation="5dp"
            android:orientation="horizontal"
            android:queryHint="@string/valsvbuscarprod"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayout9"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:background="#C7ECC7"
            android:elevation="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout8">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/valtvdescripcion"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextMultiLine2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/valetdescripcion"
                android:inputType="textMultiLine" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout10"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:background="#C7ECC7"
            android:elevation="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout9">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/valtvimagen"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_camara" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="casual"
                android:text="@string/valtvfoto"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#508741"
            android:fontFamily="sans-serif-black"
            android:text="ACTUALIZAR PRODUCTO"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/update_24"
            app:iconGravity="textStart"
            app:iconSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout10" />

        <FrameLayout
            android:id="@+id/frameLayout15"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="#C7ECC7"
            android:elevation="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout7">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/valtvcategoria"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spCategoriaActualizar"
                android:layout_width="240dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>